# SenseFlow-PeopleCounter

./: .gitignore  README.md  pyproject.toml  requirements.txt  start.py
config/: config.json
src/: define_polygon.py  main.py
src/models/: yolo_model.py
src/site/backend/: app.py  database.py  main.py  people_count.db
src/site/frontend/: index.html  script.js  style.css
src/utils/: annotate.py  buffer_manager.py  processing.py  utils.py
src/video_process/: deep_sort.py  video_stream.py
